# serial-port-sdk

./: README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/scale/: AutoScaleTextView.java  (+3 more)
app/src/main/res/drawable/: black_border.xml  button_background.xml  log_black_border.xml
app/src/main/res/layout/: activity_main.xml  activity_serial_port.xml  demo.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: CMakeLists.txt  build.gradle
mylibrary/src/androidTest/java/com/ikudot/mylibrary/: ExampleInstrumentedTest.java
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: SerialPort.c  SerialPort.h  native-lib.cpp  native-lib.h
mylibrary/src/main/java/com/ikudot/mylibrary/: Device.java  Driver.java  NdkLibrary.java  SerialPort.java  SerialPortFinder.java  SerialPortManager.java
mylibrary/src/main/java/com/ikudot/mylibrary/listener/: OnOpenSerialPortListener.java  OnSerialPortDataListener.java
mylibrary/src/main/java/com/ikudot/mylibrary/thread/: SerialPortReadThread.java
mylibrary/src/main/java/com/ikudot/mylibrary/util/: ByteUtil.java  Cmd.java
mylibrary/src/test/java/com/ikudot/mylibrary/: ExampleUnitTest.java
serialportlibrary/: build.gradle
serialportlibrary/src/main/: AndroidManifest.xml
serialportlibrary/src/main/res/drawable/: shape_toast_bg.xml
serialportlibrary/src/main/res/layout/: custom_toast.xml
serialportlibrary/src/main/res/values/: colors.xml
(+54 files in other folders)
